Replace URL creation with URI conversion in AFBase class